tests/invalid_options_file/inf_incl_direct.options_file
MCFLAGS += -V
include inf_incl_direct.options_file
